syntax = "proto3";

// go 包定义
option go_package = ".;pb";

package Hello;

// php 命名空间定义
option php_namespace = "App\\Grpc\\Hello";
option php_metadata_namespace = "App\\Grpc\\GPBMetadata";

// 如果需要http gateway的话，请打开这个注释
// import "google/api/annotations.proto";

service GreeterService {
    rpc SayHello (HelloReq) returns (HelloReply){
        // 如果需要http gateway的话，请打开这个注释
//        option (google.api.http) = {
//            // get: "/v1/greeter/say_hello/{name}"
//            post: "/v1/greeter/say_hello"
//            body: "*"
//        };
    };
}

message HelloReq {
    int64 id = 1;
    string name = 2;
}

message HelloReply {
    string name = 1;
    string message = 2;
}
